--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,9 +65,9 @@ content="A home for topics in human precision medicine, genomic analysis, and da
 			<div class="logoimage">
 				<a href="/">
 				<img style="margin-bottom:-16px" 
-				src="/images/logos/logo4.2_150ppi.png" 
-				alt="Logo image" width="25" height="38.5" /></a>
-				<!-- alt="Logo image" width="35.7" height="55" /></a> -->
+				src="/images/logo/vaud_ch_logo.png" 
+				alt="Logo image" width="38.5" height="38.5" /></a>
+				<!-- alt="Logo image" width="25" height="38.5" /></a> -->
 			</div>
 
 			<div class="logo">
@@ -101,8 +101,9 @@ content="A home for topics in human precision medicine, genomic analysis, and da
 		<div class="foot-container">
 				<a href="/" class="logo-foot">
 				<img style="margin-bottom:-16px" 
-				src="/images/logos/logo4.2_150ppi.png" 
-				alt="Logo image" width="25" height="38.5" /></a>
+				src="/images/logo/vaud_ch_logo.png" 
+				alt="Logo image" width="38.5" height="38.5" /></a>
+				<!-- alt="Logo image" width="25" height="38.5" /></a> -->
 					<div class="right-root">
 						<p><a href="https://github.com/DylanLawless/DylanLawless.github.io/tree/source">Maintained</a> by Dylan Lawless. Scientist at <a href="https://people.epfl.ch/dylan.lawless">EPFL</a>.
 						<a href="/resume">Resume</a>
